refactor airflow p/ usar postgres como db

--- a/spark/Dockerfile
+++ b/spark/Dockerfile
@@ -1,3 +1,5 @@
 FROM bitnami/spark:latest
-RUN mkdir /app
-COPY scripts/ /app/scripts/
+
+USER root
+RUN mkdir -p /app/scripts && chown -R 1001:1001 /app/scripts
+USER 1001
