--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-AIRFLOW_UID=1000
-AIRFLOW_GID=0
+AIRFLOW_UID=50000
+_AIRFLOW_WWW_USER_USERNAME=airflow
+_AIRFLOW_WWW_USER_PASSWORD=airflow
+AIRFLOW_IMAGE_NAME=apache/airflow:2.10.4
