--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,166 +1,271 @@
-version: '3.7'
+### The Airflow snippets were retrieved from https://airflow.apache.org/docs/apache-airflow/stable/howto/docker-compose/index.html
+### and follow APACHE 2.0 Licence (see APACHE-LICENCE)
+# WARNING: This configuration is for local development. Do not use it in a production deployment.
+
+---
+x-airflow-common:
+  &airflow-common
+  image: airflow_with_spark
+  build: 
+    context: ./airflow
+  networks:
+    - sparkpg_network 
+  environment:
+    &airflow-common-env
+    AIRFLOW__CORE__EXECUTOR: CeleryExecutor
+    AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@airflow-postgres/airflow
+    AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflow:airflow@airflow-postgres/airflow
+    AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
+    AIRFLOW__CORE__FERNET_KEY: ''
+    AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
+    AIRFLOW__CORE__LOAD_EXAMPLES: 'true'
+    AIRFLOW__CORE__TEST_CONNECTION: 'Enabled'
+    AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session'
+    AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
+    _PIP_ADDITIONAL_REUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
+  volumes:
+    - spark-events:/opt/spark/events
+    - ${AIRFLOW_PROJ_DIR:-.}airflow/dags:/opt/airflow/dags
+    - ${AIRFLOW_PROJ_DIR:-.}airflow/logs:/opt/airflow/logs
+    - ${AIRFLOW_PROJ_DIR:-.}airflow/config:/opt/airflow/config
+    - ${AIRFLOW_PROJ_DIR:-.}airflow/plugins:/opt/airflow/plugins
+  user: "${AIRFLOW_UID:-50000}:0"
+  depends_on:
+    &airflow-common-depends-on
+    redis:
+      condition: service_healthy
+    airflow-postgres:
+      condition: service_healthy
+
+networks:
+  sparkpg_network:
 
 services:
-  spark:
+  
+  spark-master:
+    image: my_first_spark
     build: ./spark
-    container_name: spark_master
-    environment:
-      - SPARK_MODE=master
-      - SPARK_MASTER_WEBUI_PORT=9090
-      - SPARK_RPC_AUTHENTICATION_ENABLED=no
-      - SPARK_RPC_ENCRYPTION_ENABLED=no
-      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-      - SPARK_SSL_ENABLED=no
-      - SPARK_USER=spark
+    container_name: spark-master
+    networks:
+      - sparkpg_network
+    entrypoint: /bin/bash
+    command: -c "/opt/spark/sbin/start-master.sh; tail -f /dev/null"
+    ports:
+      - '8080:8080'
+      - '4040:4040'
     volumes:
+      - spark-events:/opt/spark/events
       - ./spark/scripts:/app/scripts
       - ./datalake:/datalake
-    working_dir: /app/scripts
-    ports:
-      - '9090:9090'
-      - '7077:7077'
 
   spark-worker:
+    image: my_first_spark
     build: ./spark
-    container_name: spark_worker
-    environment:
-      - SPARK_MODE=worker
-      - SPARK_MASTER_URL=spark://spark_master:7077
-      - SPARK_WORKER_MEMORY=1G      
-      - SPARK_WORKER_CORES=1
-      - SPARK_RPC_AUTHENTICATION_ENABLED=no
-      - SPARK_RPC_ENCRYPTION_ENABLED=no
-      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-      - SPARK_SSL_ENABLED=no
-      - SPARK_USER=spark
+    container_name: spark-worker1
+    networks:
+      - sparkpg_network
+    entrypoint: /bin/bash
+    command: -c "/opt/spark/sbin/start-worker.sh  spark://spark-master:7077; tail -f /dev/null"
     volumes:
+      - spark-events:/opt/spark/events
       - ./spark/scripts:/app/scripts
-      - ./datalake:/datalake
-    working_dir: /app/scripts
-
-  postgres:
-    image: postgres:13
-    container_name: postgres
-    environment:
-      POSTGRES_USER: airflow
-      POSTGRES_PASSWORD: airflow
-      POSTGRES_DB: airflow
-    ports:
-      - "5432:5432"
+      - ./datalake:/datalake  
+    
+  spark-history-server:
+    image: my_first_spark
+    build: ./spark
+    container_name: spark-history-server
+    networks:
+      - sparkpg_network
+    entrypoint: /bin/bash
+    command: -c "/opt/spark/sbin/start-history-server.sh; tail -f /dev/null"
     volumes:
-      - postgres-db-volume:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD", "pg_isready", "-U", "airflow"]
-      interval: 10s
-      retries: 5
-      start_period: 5s
-    restart: always
+      - spark-events:/opt/spark/events 
+    ports:
+      - '18080:18080'
+
+  airflow-postgres:
+      image: postgres:13
+      networks:
+        - sparkpg_network
+      environment:
+        POSTGRES_USER: airflow
+        POSTGRES_PASSWORD: airflow
+        POSTGRES_DB: airflow
+      healthcheck:
+        test: ["CMD", "pg_isready", "-U", "airflow"]
+        interval: 10s
+        retries: 5
+        start_period: 5s
+      restart: always
 
   redis:
-    image: redis:7.2-bookworm
-    container_name: redis
-    expose:
-      - 6379
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 10s
-      timeout: 30s
-      retries: 50
-      start_period: 30s
-    restart: always
-
-  airflow-init:
-    build: ./airflow
-    container_name: airflow_init
-    entrypoint: /bin/bash
-    command:
-      - -c
-      - |
-        airflow db migrate
-    environment:
-      AIRFLOW__CORE__EXECUTOR: CeleryExecutor
-      AIRFLOW__CORE__FERNET_KEY: "P0EbImq09ZCHK5LI9fqcdhH8E0u-n9R-5rNQyqo5bws=="
-      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
-      AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflow:airflow@postgres/airflow
-      AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
-      AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
-      AIRFLOW__CORE__LOAD_EXAMPLES: 'true'
-      _AIRFLOW_WWW_USER_CREATE: 'true'
-      _AIRFLOW_WWW_USER_USERNAME: 'airflow'
-      _AIRFLOW_WWW_USER_PASSWORD: 'airflow'
-      _PIP_ADDITIONAL_REQUIREMENTS: ''
-    volumes:
-      - ./airflow/dags:/opt/airflow/dags
-      - ./airflow/logs:/opt/airflow/logs
-      - ./airflow/plugins:/opt/airflow/plugins
-    depends_on:
-      - postgres
-      - redis
+      image: redis:7.2-bookworm
+      networks:
+          - sparkpg_network
+      expose:
+        - 6379
+      healthcheck:
+        test: ["CMD", "redis-cli", "ping"]
+        interval: 10s
+        timeout: 30s
+        retries: 50
+        start_period: 30s
+      restart: always
 
   airflow-webserver:
-    build: ./airflow
-    container_name: airflow_webserver
-    command: api-server
-    environment:
-      AIRFLOW__CORE__EXECUTOR: CeleryExecutor
-      AIRFLOW__CORE__FERNET_KEY: "P0EbImq09ZCHK5LI9fqcdhH8E0u-n9R-5rNQyqo5bws=="
-      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
-      AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflow:airflow@postgres/airflow
-      AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
-      AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
-      AIRFLOW__CORE__LOAD_EXAMPLES: 'true'
-    ports:
-      - "8080:8080"
-    depends_on:
-      - airflow-init
-      - postgres
-      - redis
-    volumes:
-      - ./airflow/dags:/opt/airflow/dags
-      - ./airflow/logs:/opt/airflow/logs
-      - ./airflow/plugins:/opt/airflow/plugins
+      <<: *airflow-common
+      command: webserver
+      ports:
+        - "8090:8080"
+      healthcheck:
+        test: ["CMD", "curl", "--fail", "http://localhost:8090/health"]
+        interval: 30s
+        timeout: 10s
+        retries: 5
+        start_period: 30s
+      restart: always
+      depends_on:
+        <<: *airflow-common-depends-on
+        airflow-init:
+          condition: service_completed_successfully
 
   airflow-scheduler:
-    build: ./airflow
-    container_name: airflow_scheduler
-    command: scheduler
-    environment:
-      AIRFLOW__CORE__EXECUTOR: CeleryExecutor
-      AIRFLOW__CORE__FERNET_KEY: "P0EbImq09ZCHK5LI9fqcdhH8E0u-n9R-5rNQyqo5bws=="
-      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
-      AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflow:airflow@postgres/airflow
-      AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
-      AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
-      AIRFLOW__CORE__LOAD_EXAMPLES: 'true'
-    depends_on:
-      - airflow-init
-      - postgres
-      - redis
-    volumes:
-      - ./airflow/dags:/opt/airflow/dags
-      - ./airflow/logs:/opt/airflow/logs
-      - ./airflow/plugins:/opt/airflow/plugins
+      <<: *airflow-common
+      command: scheduler
+      healthcheck:
+        test: ["CMD", "curl", "--fail", "http://localhost:8974/health"]
+        interval: 30s
+        timeout: 10s
+        retries: 5
+        start_period: 30s
+      restart: always
+      depends_on:
+        <<: *airflow-common-depends-on
+        airflow-init:
+          condition: service_completed_successfully
 
   airflow-worker:
-    build: ./airflow
-    container_name: airflow_worker
-    command: celery worker
-    environment:
-      AIRFLOW__CORE__EXECUTOR: CeleryExecutor
-      AIRFLOW__CORE__FERNET_KEY: "P0EbImq09ZCHK5LI9fqcdhH8E0u-n9R-5rNQyqo5bws=="
-      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
-      AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflow:airflow@postgres/airflow
-      AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
-      AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
-      AIRFLOW__CORE__LOAD_EXAMPLES: 'true'
-    depends_on:
-      - airflow-init
-      - postgres
-      - redis
-    volumes:
-      - ./airflow/dags:/opt/airflow/dags
-      - ./airflow/logs:/opt/airflow/logs
-      - ./airflow/plugins:/opt/airflow/plugins
+      <<: *airflow-common
+      command: celery worker
+      healthcheck:
+        test:
+          - "CMD-SHELL"
+          - 'celery --app airflow.providers.celery.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}" || celery --app airflow.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}"'
+        interval: 30s
+        timeout: 10s
+        retries: 5
+        start_period: 30s
+      environment:
+        <<: *airflow-common-env
+        # Required to handle warm shutdown of the celery workers properly
+        # See https://airflow.apache.org/docs/docker-stack/entrypoint.html#signal-propagation
+        DUMB_INIT_SETSID: "0"
+      restart: always
+      depends_on:
+        <<: *airflow-common-depends-on
+        airflow-init:
+          condition: service_completed_successfully
 
+  airflow-triggerer:
+      <<: *airflow-common
+      command: triggerer
+      healthcheck:
+        test: ["CMD-SHELL", 'airflow jobs check --job-type TriggererJob --hostname "$${HOSTNAME}"']
+        interval: 30s
+        timeout: 10s
+        retries: 5
+        start_period: 30s
+      restart: always
+      depends_on:
+        <<: *airflow-common-depends-on
+        airflow-init:
+          condition: service_completed_successfully
+
+  airflow-init:
+      <<: *airflow-common
+      entrypoint: /bin/bash
+      command:
+        - -c
+        - |
+          if [[ -z "${AIRFLOW_UID}" ]]; then
+            echo
+            echo -e "\033[1;33mWARNING!!!: AIRFLOW_UID not set!\e[0m"
+            echo "If you are on Linux, you SHOULD follow the instructions below to set "
+            echo "AIRFLOW_UID environment variable, otherwise files will be owned by root."
+            echo "For other operating systems you can get rid of the warning with manually created .env file:"
+            echo "    See: https://airflow.apache.org/docs/apache-airflow/stable/howto/docker-compose/index.html#setting-the-right-airflow-user"
+            echo
+          fi
+          one_meg=1048576
+          mem_available=$$(($$(getconf _PHYS_PAGES) * $$(getconf PAGE_SIZE) / one_meg))
+          cpus_available=$$(grep -cE 'cpu[0-9]+' /proc/stat)
+          disk_available=$$(df / | tail -1 | awk '{print $$4}')
+          warning_resources="false"
+          if (( mem_available < 4000 )) ; then
+            echo
+            echo -e "\033[1;33mWARNING!!!: Not enough memory available for Docker.\e[0m"
+            echo "At least 4GB of memory required. You have $$(numfmt --to iec $$((mem_available * one_meg)))"
+            echo
+            warning_resources="true"
+          fi
+          if (( cpus_available < 2 )); then
+            echo
+            echo -e "\033[1;33mWARNING!!!: Not enough CPUS available for Docker.\e[0m"
+            echo "At least 2 CPUs recommended. You have $${cpus_available}"
+            echo
+            warning_resources="true"
+          fi
+          if (( disk_available < one_meg * 10 )); then
+            echo
+            echo -e "\033[1;33mWARNING!!!: Not enough Disk space available for Docker.\e[0m"
+            echo "At least 10 GBs recommended. You have $$(numfmt --to iec $$((disk_available * 1024 )))"
+            echo
+            warning_resources="true"
+          fi
+          if [[ $${warning_resources} == "true" ]]; then
+            echo
+            echo -e "\033[1;33mWARNING!!!: You have not enough resources to run Airflow (see above)!\e[0m"
+            echo "Please follow the instructions to increase amount of resources available:"
+            echo "   https://airflow.apache.org/docs/apache-airflow/stable/howto/docker-compose/index.html#before-you-begin"
+            echo
+          fi
+          mkdir -p /sources/logs /sources/dags /sources/plugins
+          chown -R "${AIRFLOW_UID}:1000" /sources/{logs,dags,plugins}
+          chown -R "${AIRFLOW_UID}:1000" /opt/spark/events
+          chown -R "${AIRFLOW_UID}:1000" /opt/airflow/{logs,dags,plugins}
+          exec /entrypoint airflow version
+      environment:
+        <<: *airflow-common-env
+        _AIRFLOW_DB_MIGRATE: 'true'
+        _AIRFLOW_WWW_USER_CREATE: 'true'
+        _AIRFLOW_WWW_USER_USERNAME: ${_AIRFLOW_WWW_USER_USERNAME:-airflow}
+        _AIRFLOW_WWW_USER_PASSWORD: ${_AIRFLOW_WWW_USER_PASSWORD:-airflow}
+        _PIP_ADDITIONAL_REQUIREMENTS: ''
+      user: "0:0"
+      volumes:
+        - spark-events:/opt/spark/events
+        - ${AIRFLOW_PROJ_DIR:-.}:/sources
+
+  airflow-cli:
+      <<: *airflow-common
+      environment:
+        <<: *airflow-common-env
+        CONNECTION_CHECK_MAX_COUNT: "0"
+      command:
+        - bash
+        - -c
+        - |
+            airflow connections add 'spark_standalone_client' \
+              --conn-json '{
+                  "conn_type": "spark",
+                  "host": "spark://spark-master",
+                  "port": 7077
+              }'
+      depends_on:
+        <<: *airflow-common-depends-on
+        airflow-init:
+          condition: service_completed_successfully
 volumes:
-  postgres-db-volume:
+  spark-events:
+  # minio_data:
