--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,10 +25,10 @@ x-airflow-common:
     _PIP_ADDITIONAL_REUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
   volumes:
     - spark-events:/opt/spark/events
-    - ${AIRFLOW_PROJ_DIR:-.}airflow/dags:/opt/airflow/dags
-    - ${AIRFLOW_PROJ_DIR:-.}airflow/logs:/opt/airflow/logs
-    - ${AIRFLOW_PROJ_DIR:-.}airflow/config:/opt/airflow/config
-    - ${AIRFLOW_PROJ_DIR:-.}airflow/plugins:/opt/airflow/plugins
+    - ${AIRFLOW_PROJ_DIR:-.}/airflow/dags:/opt/airflow/dags
+    - ${AIRFLOW_PROJ_DIR:-.}/airflow/logs:/opt/airflow/logs
+    - ${AIRFLOW_PROJ_DIR:-.}/airflow/config:/opt/airflow/config
+    - ${AIRFLOW_PROJ_DIR:-.}/airflow/plugins:/opt/airflow/plugins
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
@@ -43,7 +43,7 @@ networks:
 services:
   
   spark-master:
-    image: my_first_spark
+    image: spark_master
     build: ./spark
     container_name: spark-master
     networks:
@@ -59,7 +59,7 @@ services:
       - ./datalake:/datalake
 
   spark-worker:
-    image: my_first_spark
+    image: spark_worker
     build: ./spark
     container_name: spark-worker1
     networks:
@@ -72,7 +72,7 @@ services:
       - ./datalake:/datalake  
     
   spark-history-server:
-    image: my_first_spark
+    image: spark_history_server
     build: ./spark
     container_name: spark-history-server
     networks:
