--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ x-airflow-common:
     AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
     AIRFLOW__CORE__FERNET_KEY: ''
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
-    AIRFLOW__CORE__LOAD_EXAMPLES: 'true'
+    AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__CORE__TEST_CONNECTION: 'Enabled'
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session'
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
@@ -29,6 +29,8 @@ x-airflow-common:
     - ./airflow/logs:/opt/airflow/logs
     - ./airflow/config:/opt/airflow/config
     - ./airflow/plugins:/opt/airflow/plugins
+    - ./spark/scripts:/app/scripts
+    - ./datalake:/datalake
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
@@ -230,10 +232,10 @@ services:
             echo "   https://airflow.apache.org/docs/apache-airflow/stable/howto/docker-compose/index.html#before-you-begin"
             echo
           fi
-          mkdir -p /sources/logs /sources/dags /sources/plugins
-          chown -R "${AIRFLOW_UID}:1000" /sources/{logs,dags,plugins}
           chown -R "${AIRFLOW_UID}:1000" /opt/spark/events
           chown -R "${AIRFLOW_UID}:1000" /opt/airflow/{logs,dags,plugins}
+          chown -R "${AIRFLOW_UID}:1000" /datalake
+          umask 002
           exec /entrypoint airflow version
       environment:
         <<: *airflow-common-env
@@ -245,7 +247,6 @@ services:
       user: "0:0"
       volumes:
         - spark-events:/opt/spark/events
-        - ${AIRFLOW_PROJ_DIR:-.}:/sources
 
   airflow-cli:
       <<: *airflow-common
