--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -86,6 +86,34 @@ services:
     ports:
       - '18080:18080'
 
+  minio:
+    image: quay.io/minio/minio
+    command: server /data --console-address ":9001"
+    container_name: minio
+    networks:
+      - sparkpg_network
+    environment:
+      - MINIO_ROOT_USER=minioadmin
+      - MINIO_ROOT_PASSWORD=minioadmin
+    volumes:
+      - minio_data:/data 
+    ports:
+      - 9000:9000
+      - 9001:9001
+
+  mc:
+    image: quay.io/minio/mc
+    container_name: mc
+    depends_on:
+      - minio
+    networks:
+      - sparkpg_network
+    volumes:
+      - ./minio/init-minio.sh:/init-minio.sh
+      - ./minio/minio_data.csv:/sample.csv
+      - ./minio/minio_policy.json:/policy.json
+    entrypoint: ./init-minio.sh
+
   airflow-postgres:
       image: postgres:13
       networks:
@@ -269,4 +297,4 @@ services:
           condition: service_completed_successfully
 volumes:
   spark-events:
-  # minio_data:
+  minio_data:
